<resources>
    <string name="app_name">KittyBee</string>
    <string name="action_settings">Settings</string>
    <string name="start_internet">Start Internet</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="notification">Notification</string>
    <string name="add_group">Add Group</string>
    <string name="personal_notes">Personal Notes</string>
    <string name="my_kitty">My Kitty</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="loading_text">Loading Please Wait...</string>
    <string name="back"><u>Back</u></string>
    <string name="resend"><u>Resend OTP</u></string>
    <string name="facebook_app_id" translatable="false">299481207055064</string>
    <string name="phone">Phone :</string>
    <string name="status">Status :</string>
    <string name="email">Email :</string>
    <string name="sex">Sex :</string>
    <string name="sex_mandotary">Sex*</string>
    <string name="dob">Birthday :</string>
    <string name="doa">Anniversary :</string>
    <string name="city">City :</string>
    <string name="address">Address :</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="set_venue">Set Venue</string>
    <string name="clear_all">Clear All</string>
    <string name="create_group">Create Group</string>
    <string name="provide_group_name">Please provide group name and optional group icon</string>
    <string name="type_group_name">Type group name here...</string>
    <string name="calendar">CALENDAR</string>
    <string name="jewellry">JEWELLERY</string>
    <string name="kittydays">Kitty Days</string>
    <string name="kittys">2nd</string>
    <string name="terms">TERMS &amp; CONDITIONS</string>
    <string name="first_term">\u2022 It is a long established fact that a reader will be.</string>
    <string name="sec_term">\u2022 Lorem Ipsum is simply dummy text of the printing and typesetting.</string>
    <string name="third_term">\u2022 There are many variation of passages of Lorem Ipsum available.</string>
    <string name="fourth_term">\u2022 Contrary to popular belief, Lorem Ipsum is not simply random text.</string>
    <string name="fifth_term">\u2022 There are many variation of passages of Lorem Ipsum available.</string>
    <string name="sixth_term">\u2022 Contrary to popular belief, Lorem Ipsum is not simply random text.</string>
    <string name="contact">Contact</string>
    <string name="kitty_rules">Kitty Rules</string>
    <string name="kitty_amount">₹ Kitty Amount(If any)</string>
    <string name="kitty_days">Kitty Days</string>
    <string name="categories">Categories</string>
    <string name="add_date">Add Date</string>
    <string name="add_kid">Add Kid</string>
    <string name="time">Time</string>
    <string name="fine_option">Fine Option</string>
    <string name="puntuality">Punctuality Option</string>
    <string name="no_host">No. of Host</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="puntuality_amount">Punctuality Amount</string>
    <string name="puntuality_time">Punctuality Time</string>
    <string name="food_money">Food \nMoney</string>
    <string name="host">Host</string>
    <string name="dutch">Dutch</string>
    <string name="fixed">Fixed</string>
    <string name="drinks">Drinks</string>
    <string name="games">Games</string>
    <string name="select_games">Select Games</string>
    <string name="tambola">Tambola</string>
    <string name="game_price">Game Price</string>
    <string name="normal">Normal</string>
    <string name="like_to_create_dest">Would like to create destination Kitty</string>
    <string name="additional_notes">Additional Notes for destination</string>
    <string name="text_goes_here">Text goes here</string>
    <string name="bill">Bill</string>
    <string name="diary_notes">Diary Notes</string>
    <string name="submit">Submit</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="chat_sample">Chat Sample</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_chat_info">Chat info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_select_people_done">Done</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_restoring_chat_session_logout">Restoring session and logout</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_login">Login…</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="login_title">@string/chat_sample</string>
    <string name="splash_app_title">@string/chat_sample</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="login_select_user_for_login">Select User for Login to Chat</string>
    <string name="login_cant_obtain_users">Can\'t obtain users errors</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_list_hint">Select a Dialog to Chat</string>
    <string name="dialogs_get_error">Get dialogs errors</string>
    <string name="select_users_list_hint">Select Users you want to chat</string>
    <string name="select_users_create_chat">Create new chat</string>
    <string name="select_users_edit_chat">Add Users to chat</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="chat_sticker">Sticker</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Enter message here...</string>
    <string name="chat_me">Me</string>
    <string name="chat_friend">Friend</string>
    <string name="chat_join_error">Error join group chat</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_load_history_error">Load chat history errors</string>
    <string name="chat_load_users_error">Load chat users errors</string>
    <string name="chat_attachment_error">Can\'t load chosen file</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_empty_start_new_chat">Start new chat.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Quickblox Chat Notification</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="chat_info">Chat info</string>
    <string name="chat_info_add_people_error">Add people errors</string>
    <string name="group_chat_join_error">Could not join chat, errors:</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="name_mandatory">Name*</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="terms_text">By clicking sign up, you agree to our Terms and that you have read our Data Policy.</string>
    <string name="contact_us_info">KittyBee welcomes all suggestions and feedback. Your comments are very valuable and inspire us to work harder!\n Write to us at- </string>
    <string name="bill_image_here">Bill Image Here</string>
    <string name="invite">Invite</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_group_name">Please enter group name</string>
    <string name="select_min_members">Please select at least one member for group</string>
    <string name="please_wait">Please wait…</string>
    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_loading">Loading…</string>
    <string name="dlg_choose_image_from">Select photo from…</string>
    <string name="dlg_retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="is_require_text">is require.</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="lbl_city">City</string>
    <string name="lbl_city_mandatory">City*</string>
    <string name="lbl_profile_pic">Profile Pic</string>
    <string name="lbl_family_pic">Family Pic</string>
    <string name="lbl_couple_pic">Couple Pic</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_email_mendatory">Email*</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="lbl_connect_with_facebook">Connect with facebook</string>
    <string name="lbl_connect_with_google">Connect with Google+</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="please_provide_group_name_n_icon">Please provide group Name and \n optional group icon</string>
    <string name="lbl_next">Next</string>
    <string name="type_group_name_here">Type Group Name here...</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="login">LOGIN</string>
    <string name="resend_otp">Resend OTP</string>
    <string-array name="dlg_image_pick">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
    <string name="server_error">Yikes! Something went wrong, Please try again</string>
    <string name="gcm_project_id" translatable="false">23596211365</string>
    <string name="lbl_otp">OTP</string>
    <string name="maybe">Maybe</string>
    <string name="_5_min_ago">5 min ago</string>
    <string name="you_have_an_invitation_for_the_chandigarh_kitty">You have an invitation for the Chandigarh Kitty</string>
    <string name="upload_bill">Upload Bill</string>
    <string name="jewellery_s">Jewellery</string>
    <string name="partners_s">Partners</string>
    <string name="restaurant_s">Restaurant</string>
    <string name="parlour_s">Parlour</string>
    <string name="boutique_s">Boutique</string>
    <string name="special">special</string>
    <string name="couple_kitty">Couple \nKitty</string>
    <string name="kitty_with_kids">Kitty \nwith Kids</string>
    <string name="normal_kitty">Normal \nKitty</string>
    <string name="cancel">Cancel</string>
    <string name="next">NEXT</string>
    <string name="or">-OR-</string>
    <string name="kitty_date">Kitty date</string>
    <string name="add_kitty_rules">Do you want to set kitty rules?</string>
    <string name="later">Later</string>
    <string name="now">Now</string>
    <string name="is_middle_of_kitty">Middle of the Kitty</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="not_now">Not now</string>
    <string name="login_via_facebook">Login via Facebook</string>
    <string name="login_via_google">Login via Google</string>
    <string name="or_register">-OR-</string>
    <string name="marked_are_mandatory_register">* Marked are Mandatory</string>
    <string name="kitty_manager">Kitty Manager</string>
</resources>