<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_drawer_home"
            android:checked="false"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/home" />

        <item
            android:id="@+id/menu_drawer_my_profile"
            android:checked="false"
            android:icon="@drawable/ic_drawer_my_profile"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/menu_drawer_notification"
            android:checked="false"
            android:icon="@drawable/ic_drawer_notification"
            android:title="@string/notification" />

        <item
            android:id="@+id/menu_drawer_add_group"
            android:checked="false"
            android:icon="@drawable/ic_action_group"
            android:title="@string/add_group" />


        <item
            android:id="@+id/menu_drawer_my_kitty"
            android:checked="false"
            android:icon="@drawable/ic_drawer_my_kitty"
            android:title="@string/my_kitty" />

        <item
            android:id="@+id/menu_drawer_kitty_manager"
            android:checked="false"
            android:icon="@drawable/ic_drawer_my_kitty"
            android:title="@string/kitty_manager" />

        <item
            android:id="@+id/menu_drawer_personal_notes"
            android:checked="false"
            android:icon="@drawable/ic_drawer_notes"
            android:title="@string/personal_notes" />

        <item
            android:id="@+id/menu_drawer_contact_us"
            android:checked="false"
            android:icon="@drawable/ic_drawer_contact"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/menu_drawer_about_us"
            android:checked="false"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />

    </group>

</menu>