<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_setting_edit_name"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:title="@string/edit_group_name"
        app:showAsAction="always" />
    <!--<item-->
    <!--android:id="@+id/menu_setting_open_media"-->
    <!--android:icon="@drawable/ic_media"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/edit_group_image"-->
    <!--app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/menu_action_diary"
        android:icon="@drawable/ic_menu_diary_chat"
        android:orderInCategory="100"
        android:title="@string/diary_notes"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_home_jump"
        android:icon="@drawable/ic_drawer_home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="always" />
</menu>