<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlRegRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgRegisterBackGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <ProgressBar
        android:id="@+id/pbLoaderRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llSocialButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_10_dp"
        android:layout_marginLeft="@dimen/common_10_dp"
        android:layout_marginRight="@dimen/common_10_dp"
        android:layout_marginStart="@dimen/common_10_dp"
        android:layout_marginTop="@dimen/common_20_dp"
        android:weightSum="2">

        <com.kittyapplication.custom.CustomTextViewNormal
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/common_5_dp"
            android:layout_marginRight="@dimen/common_5_dp"
            android:layout_weight="1"
            android:background="@color/colorFB"
            android:drawableLeft="@drawable/btn_fb_with_bg"
            android:drawablePadding="@dimen/common_5_dp"
            android:drawableStart="@drawable/btn_fb_with_bg"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/login_via_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/h6" />

        <com.kittyapplication.custom.CustomTextViewNormal
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorGoogle"
            android:drawableLeft="@drawable/btn_google_with_bg"
            android:drawablePadding="@dimen/common_5_dp"
            android:drawableStart="@drawable/btn_google_with_bg"
            android:gravity="center_vertical"
            android:text="@string/login_via_google"
            android:textColor="@color/white"
            android:textSize="@dimen/h6" />

    </LinearLayout>

    <com.kittyapplication.custom.CustomTextViewBold
        android:id="@+id/txtOr"
        style="@style/leftRightMarginNewRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSocialButtons"
        android:layout_margin="@dimen/common_20_dp"
        android:gravity="center_horizontal"
        android:text="@string/or_register"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/h3" />

    <com.kittyapplication.custom.CustomEditTextNormal
        android:id="@+id/edtName"
        style="@style/styleNewRegisterEdittext"
        android:layout_below="@id/txtOr"
        android:hint="@string/name_mandatory"
        android:imeOptions="actionNext"
        android:textColorHint="@color/color_grey" />


    <com.kittyapplication.custom.CustomEditTextNormal
        android:id="@+id/edtEmail"
        style="@style/styleNewRegisterEdittext"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtName"
        android:layout_marginTop="@dimen/common_10_dp"
        android:hint="@string/lbl_email_mendatory"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress" />

    <RadioGroup
        android:id="@+id/rgGender"
        style="@style/leftRightMarginNewRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="7">

        <com.kittyapplication.custom.CustomTextViewNormal
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_mandotary"
            android:textColor="@color/registrationtextcolor"
            android:textSize="@dimen/h5" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:checked="true"
            android:text="@string/male"
            android:textColor="@color/registrationtextcolor"
            android:textSize="@dimen/h6" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/female"
            android:textColor="@color/registrationtextcolor"
            android:textSize="@dimen/h6" />

        <RadioButton
            android:id="@+id/rbNotNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/not_now"
            android:textColor="@color/registrationtextcolor"
            android:textSize="@dimen/h6" />
    </RadioGroup>

    <com.kittyapplication.custom.AutoCompleteTextView
        android:id="@+id/edtCity"
        style="@style/styleNewRegisterEdittext"
        android:layout_below="@id/rgGender"
        android:layout_marginTop="@dimen/common_10_dp"
        android:completionThreshold="3"
        android:hint="@string/lbl_city_mandatory"
        android:imeOptions="actionDone" />

    <com.kittyapplication.custom.CustomTextViewBold
        android:id="@+id/txtMarkedMandatory"
        style="@style/leftRightMarginNewRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCity"
        android:layout_margin="@dimen/common_20_dp"
        android:gravity="center_horizontal"
        android:text="@string/marked_are_mandatory_register"
        android:textSize="@dimen/h5" />

    <com.kittyapplication.custom.CustomTextViewBold
        android:id="@+id/txtTermCondition"
        style="@style/leftRightMarginNewRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMarkedMandatory"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/padding_common"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/h5" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/leftRightMarginNewRegistrationStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTermCondition"
        android:layout_marginTop="@dimen/common_20_dp"
        android:background="@drawable/login_button_selector"
        android:gravity="center"
        android:padding="@dimen/common_10_dp"
        android:text="@string/lbl_sign_up"
        android:textColor="@android:color/white"
        android:textSize="@dimen/h4" />

</RelativeLayout>