<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlRegRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.kittyapplication.custom.CustomEditTextNormal
                android:id="@+id/edtName"
                style="@style/styleCommonEdittext"
                android:gravity="left|start"
                android:hint="@string/name_mandatory"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <com.kittyapplication.custom.CustomEditTextNormal
                android:id="@+id/edtCity"
                style="@style/styleCommonEdittext"
                android:gravity="left|start"
                android:hint="@string/lbl_city"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp">

                <LinearLayout
                    android:id="@+id/llProfilePic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.kittyapplication.custom.RoundedImageView
                        android:id="@+id/imgProfilePic"
                        android:layout_width="@dimen/common_50_dp"
                        android:layout_height="@dimen/common_50_dp"
                        android:src="@drawable/ic_context_user_image" />

                    <com.kittyapplication.custom.CustomTextViewNormal
                        style="@style/styleCommonTextView1"
                        android:layout_alignParentLeft="true"
                        android:text="@string/lbl_profile_pic" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llFamilyPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.kittyapplication.custom.RoundedImageView
                        android:id="@+id/imgFamilyPic"
                        android:layout_width="@dimen/common_50_dp"
                        android:layout_height="@dimen/common_50_dp"
                        android:src="@drawable/ic_context_user_image" />

                    <com.kittyapplication.custom.CustomTextViewNormal
                        style="@style/styleCommonTextView1"
                        android:layout_alignParentLeft="true"
                        android:text="@string/lbl_family_pic" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCouplePic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.kittyapplication.custom.RoundedImageView
                        android:id="@+id/imgCouplePic"
                        android:layout_width="@dimen/common_50_dp"
                        android:layout_height="@dimen/common_50_dp"
                        android:src="@drawable/ic_context_user_image" />

                    <com.kittyapplication.custom.CustomTextViewNormal
                        style="@style/styleCommonTextView1"
                        android:layout_alignParentLeft="true"
                        android:text="@string/lbl_couple_pic" />

                </LinearLayout>

            </RelativeLayout>

            <com.kittyapplication.custom.CustomEditTextNormal
                android:id="@+id/edtEmail"
                style="@style/styleCommonEdittext"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp"
                android:gravity="left|start"
                android:hint="@string/lbl_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/common_10_dp">

                <com.kittyapplication.custom.CustomTextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textColor="@color/registrationtextcolor"
                    android:textSize="@dimen/h5" />

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_20_dp"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/registrationtextcolor"
                    android:textSize="@dimen/h5" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_5_dp"
                    android:text="@string/female"
                    android:textColor="@color/registrationtextcolor"
                    android:textSize="@dimen/h5" />

                <RadioButton
                    android:id="@+id/rbNotNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_5_dp"
                    android:text="@string/not_now"
                    android:textColor="@color/registrationtextcolor"
                    android:textSize="@dimen/h5" />
            </RadioGroup>

            <com.kittyapplication.custom.CustomEditTextNormal
                android:id="@+id/edtAddress"
                style="@style/styleCommonEdittext"
                android:gravity="left|start"
                android:hint="@string/lbl_address"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <com.kittyapplication.custom.CustomEditTextNormal
                android:id="@+id/edtDob"
                style="@style/styleCommonEdittext"
                android:drawableEnd="@drawable/ic_context_calendar"
                android:drawableRight="@drawable/ic_context_calendar"
                android:gravity="left|start|center"
                android:hint="@string/birthday"
                android:inputType="date"
                android:singleLine="true" />

            <com.kittyapplication.custom.CustomEditTextNormal
                android:id="@+id/edtDoa"
                style="@style/styleCommonEdittext"
                android:drawableEnd="@drawable/ic_context_calendar"
                android:drawableRight="@drawable/ic_context_calendar"
                android:gravity="left|start|center"
                android:hint="@string/anniversary"
                android:inputType="date"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp"
                android:gravity="left|start"
                android:orientation="horizontal"
                android:padding="@dimen/common_5_dp">


                <com.kittyapplication.custom.CustomTextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/terms_text"
                    android:textColor="@color/registrationtextcolor"
                    android:textColorHint="@color/registrationtextcolor"
                    android:textSize="@dimen/h5" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp"
                android:background="@drawable/shape_coloraccent"
                android:gravity="center"
                android:padding="@dimen/common_10_dp"
                android:text="@string/lbl_sign_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/h5" />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp"
                android:background="@drawable/shape_fb"
                android:drawableLeft="@drawable/ic_context_facebook_icon"
                android:drawableStart="@drawable/ic_context_facebook_icon"
                android:gravity="center"
                android:padding="@dimen/common_10_dp"
                android:text="@string/lbl_connect_with_facebook"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/h5" />

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10_dp"
                android:background="@drawable/shape_gplus"
                android:drawableLeft="@drawable/ic_context_google_icon"
                android:drawableStart="@drawable/ic_context_google_icon"
                android:gravity="center"
                android:padding="@dimen/common_10_dp"
                android:text="@string/lbl_connect_with_google"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/h5" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
